--- a/templates/admin/eliminar_pregunta.html
+++ b/templates/admin/eliminar_pregunta.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="right_col" role="main">
-  <h1 class="text-center">USUARIO A ELIMINAR</h1>
+  <h1 class="text-center">PREGUNTA A ELIMINAR</h1>
     <form action="" method="POST">
       {% csrf_token %}
         <div class="form-group row">
