--- a/templates/admin/actualizar_usuario.html
+++ b/templates/admin/actualizar_usuario.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="right_col" role="main">
-  <h1 class="text-center">ACTULIAZAR USUARIO</h1>
+  <h1 class="text-center">ACTULIAZAR PREGUNTA</h1>
     <form action="" method="POST">
       {% csrf_token %}
         <div class="form-group row">
