--- a/templates/admin/agregar.html
+++ b/templates/admin/agregar.html
@@ -2,7 +2,9 @@
 
 {% block content %}
 <div class="right_col" role="main">
+  <h1 class="text-center">AGREGAR USUARIO</h1>
     <form action="" method="POST">
+      {% csrf_token %}
         <div class="form-group row">
           <label for="uaser" class="col-4 col-form-label">Correo</label> 
           <div class="col-8">
@@ -12,7 +14,7 @@
                   <i class="fa fa-envelope"></i>
                 </div>
               </div> 
-              <input id="uaser" name="username" placeholder="Ingresa el correo del usuario." type="email" class="form-control" required="required">
+              <input id="uaser" name="email" placeholder="Ingresa el correo del usuario." type="email" class="form-control" required="required">
             </div>
           </div>
         </div>
